--- a/PalCine/Info.plist
+++ b/PalCine/Info.plist
@@ -38,6 +38,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
